test/conformance/kuttl/events/clusterpolicy/generate-events-upon-successful-generation/04-event.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- policy-event.yaml
- resource-event.yaml
