test/conformance/kuttl/events/clusterpolicy/generate-events-upon-successful-generation/resource-event.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: test-ns
involvedObject:
  apiVersion: v1
  kind: ConfigMap
  name: zk-kafka-address
  namespace: test-ns
type: Normal
reason: PolicyApplied
reportingComponent: kyverno-generate
